# agentbox

./: .gitignore  LICENSE  README.md
agent-operator/: Makefile  PROJECT  README.md  go.mod  go.sum
agent-operator/api/v1alpha1/: agent_types.go  groupversion_info.go  zz_generated.deepcopy.go
agent-operator/cmd/: main.go
agent-operator/config/crd/: kustomization.yaml
agent_sdk/: README.md  pyproject.toml
agent_sdk/src/agent_sdk/: __init__.py  types.py  utils.py
agent_sdk/src/agent_sdk/control/: __init__.py  agent_manager.py  control_plane_agent.py
agent_sdk/src/agent_sdk/db/: __init__.py  state.py
agent_sdk/src/agent_sdk/runtime/: __init__.py  context.py  embedding.py  entrypoint.py  llm.py  messaging.py  model.py  registry.py
agentctl/: AGENTCTL_MANUAL.html  go.mod  go.sum  main.go  test-agent.yaml
agentctl/cmd/: build.go  deploy.go  launch.go  logs.go  message.go  root.go  status.go
examples/chatbot-agent/: README.md  agent.yaml  chatbot-agent.yaml  main.py
examples/chatbot-router/: README.md  agent.yaml  main.py
hello-agent/: Dockerfile  README.md  agent.yaml  main.py
helm/: Chart.yaml  NOTES.txt  values-microk8s.yaml  values.yaml
helm/templates/: _helpers.tpl  agent.yaml  valkey-admin-secret.yaml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: deploy.sh  install_agentctl.sh  install_crds.sh  setup_microk8s.sh  setup_prereqs.sh
test/: test_agentctl.sh  test_build_deploy.sh  test_cli.sh  test_hello_agent.sh  test_hello_agent_db.sh
(+42 files in other folders)
